...
                        // Update all card backgrounds
                        HStack(spacing: 15) {
                            Image(systemName: "pencil.circle.fill")
                                .font(.title2)
                                .foregroundColor(.blue)
                            
                            TextField("Task Title", text: $title)
                                .textFieldStyle(.plain)
                                .colorScheme(colorScheme)
                        }
                        .padding()
                        .background(colorScheme == .dark ? Color(UIColor.systemGray6) : Color(UIColor.systemBackground))
                        .cornerRadius(15)
...
